changed button border color

--- a/style.css
+++ b/style.css
@@ -83,8 +83,8 @@ border: 0;
     border-radius: 20px;
     border-style: solid;
     cursor: pointer;
-    color: #50c9c3;
-    border-color:#50c9c3;
+    color: #4adede;
+    border-color:#4adede;
     font-size: 0.7rem;
     text-transform: uppercase;
 
